--- a/PaceLogger.Web/Views/Activity/Index.cshtml
+++ b/PaceLogger.Web/Views/Activity/Index.cshtml
@@ -17,6 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script src="@Url.Content("~/Scripts/Components/ValueFormatter.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Components/Laps.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Activtiy.jsx")"></script>
 </body>
