--- a/PaceLogger.Web/Views/Home/Index.cshtml
+++ b/PaceLogger.Web/Views/Home/Index.cshtml
@@ -1,10 +1,7 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -13,7 +10,7 @@
 </head>
 <body>
     <div id="content">
-        <a href="Activity">Activity</a>
+        <a href="/Activity/3">weiter</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
