Googlemaps Key ausgelagert

--- a/PaceLogger.Web/Views/Activity/Index.cshtml
+++ b/PaceLogger.Web/Views/Activity/Index.cshtml
@@ -18,7 +18,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAnAGmgfWSOk8mbtJhYbNSr52x-eN8-Y5M"></script>
+    <script src="//maps.googleapis.com/maps/api/js?key=@ViewBag.GoogleMapsKey"></script>
 
     <script>
         window['activityId'] = '@ViewBag.ActivityId';
