--- a/PaceLogger.Web/Views/Activity/Index.cshtml
+++ b/PaceLogger.Web/Views/Activity/Index.cshtml
@@ -9,16 +9,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>PaceLogger</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    @System.Web.Optimization.Styles.Render("~/bundles/css")    
 </head>
 <body>
     <div id="content"></div>
     <div id="map"></div>
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+    @System.Web.Optimization.Scripts.Render("~/bundles/lib")       
     <script src="//maps.googleapis.com/maps/api/js?key=@ViewBag.GoogleMapsKey"></script>
+
+    <!-- https://volaresystems.com/blog/post/2014/12/08/Getting-started-with-Bower-on-an-ASPNET-MVC-project -->
 
     <script>
         window['activityId'] = '@ViewBag.ActivityId';
@@ -27,7 +27,7 @@
     <script src="@Url.Content("~/Scripts/Components/ValueFormatter.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Components/Laps.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Components/Map.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/Activtiy.jsx")"></script>    
+    <script src="@Url.Content("~/Scripts/Activtiy.jsx")"></script>
 </body>
 </html>
 
