--- a/PaceLogger.Web/Views/Activity/Index.cshtml
+++ b/PaceLogger.Web/Views/Activity/Index.cshtml
@@ -9,17 +9,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>PaceLogger</title>
-    @System.Web.Optimization.Styles.Render("~/bundles/css")    
+    @Styles.Render("~/bundles/css")    
 </head>
 <body>
     <div id="content"></div>
     <div id="map"></div>
     
-    @System.Web.Optimization.Scripts.Render("~/bundles/lib")       
+    @Scripts.Render("~/bundles/lib")       
     <script src="//maps.googleapis.com/maps/api/js?key=@ViewBag.GoogleMapsKey"></script>
-
-    <!-- https://volaresystems.com/blog/post/2014/12/08/Getting-started-with-Bower-on-an-ASPNET-MVC-project -->
-
+    
     <script>
         window['activityId'] = '@ViewBag.ActivityId';
     </script>
