--- a/PaceLogger.Web/Views/Activities/Detail.cshtml
+++ b/PaceLogger.Web/Views/Activities/Detail.cshtml
@@ -27,7 +27,7 @@
     <script src="@Url.Content("~/Scripts/Components/Laps.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Components/Map.jsx")"></script>
     <script src="@Url.Content("~/Scripts/Components/Charts.jsx")"></script>
-    <script src="@Url.Content("~/Scripts/Activtiy.jsx")"></script>
+    <script src="@Url.Content("~/Scripts/ActivitiesDetail.jsx")"></script>
 </body>
 </html>
 
