--- a/PaceLogger.Web/Views/Home/Index.cshtml
+++ b/PaceLogger.Web/Views/Home/Index.cshtml
@@ -14,7 +14,13 @@
 </head>
 <body>
     <div id="content">
-        <a href="/Activity/5">weiter</a>
+        <ul>
+        <li><a href="/Activities">Liste</a></li>
+        <li><a href="/Activities/5">Detail</a></li>
+        </ul>
+        
+        
+        
         <div class="chartContainer">
             <canvas id="chartSpeed"></canvas>
         </div>
@@ -24,6 +30,7 @@
         <div class="chartContainer">
             <canvas id="chartAltitude"></canvas>
         </div>
+           
     </div>
 
     @Scripts.Render("~/bundles/lib") 
